# mktae

./: Makefile  config.status  configure  configure.ac
pkgconfig/: ardlib.pc  ardlib.pc.in  ascdm.pc  caldb4.pc  cfitsio.pc  fftw3.pc  fftw3f.pc  gsl.pc  readline.pc  region.pc  xpa.pc
src/: Makefile  Makefile.am  Makefile.in  mktae  mktae.h  mktae.par  t_mktae.c  tdet.c
src/.deps/: mktae-t_mktae.Po  mktae-tdet.Po
test/: Makefile  Makefile.am  Makefile.in  mktae.t
wrapper/: Makefile  Makefile.am  Makefile.in
